Fix side bar personal section text alignment

--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,9 @@
     font-family: 'Roboto';
     font-size: 1.2em;
     color: white;
-    
+    display: flex;
+    gap: 0.7vw;
+    margin-left: 1vw;
 }
 
 .settings {
